
The numbers after the items refer to GitHub issues. (inform #xx) refers to issue
number xx in the Inform extensions/libraries repositories.


Release 3.1
===========

- BREAKING CHANGE: JavaScript evaluation no longer writes the implicit value of
  the last expression to the return value file. Code must explicitly return a
  value, otherwise the file is left untouched.
- Fixed a bug that prevented a music track from looping if it was started
  when a previous track was already playing
- Added the vorple.audio.pauseBetweenTracks variable to set the duration of the
  pause between tracks in a playlist
- Fixed the return value of debug.off() that was always true but documented to
  be always false
- vorple.requireVersion() returns a boolean that indicates the check status and
  accepts a callback that will be run after the check instead of the default
  one that prints an error message
- Fixed a bug where versions larger than 9 would pass vorple.requireVersion()
  check
- Compatibility with Internet Explorer 11
- Added default audio options that can be set by the user
- Exposed audio.fadeOut() method so that it can be called directly
- Fixed a bug where fading out a sound while another sound was in the middle of
  fading out would stop the other sound's fadeout
- Added a parameter for audio.stopMusic that determines the fadeout duration.
  By extension setting the fadeout duration to 0 stops the music immediately.
- When the result of a JavaScript expression can't be JSON-stringified (e.g. it
  contains a circular reference) the interpreter will no longer throw an error
  and null is returned instead (#32)
- Fixed save/restore (inform7 #4)
- Glk errors thrown by the interpreter are shown in the browser console instead
  of printing them on the screen
- Errors thrown by JavaScript code executed in the story file now show the code
  in the error message (#33)
- JavaScript evaluation now uses new Function() instead of eval() which is